# infra-gdr

./: .gitignore  .gitlab-ci.yml  .terraform.lock.hcl  LICENSE.md  README.md  ansible.tf  apps.tf  backends.tf  compute.tf  data.tf  databases.tf  firewall.tf  locals.tf  main.tf  network.tf  outputs.tf  providers.tf  variables.tf  versions.tf
docs/: build.py  cluster.md  conf.py  contributing.md  index.md  installing.md  license.md  pyproject.toml  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/gettext/: index.pot  sphinx.pot
docs/_build/gettext/community/: contributing.pot  license.pot
docs/_build/gettext/infra/: apps.pot  backups.pot  databases.pot  overview.pot  security.pot  troubleshooting.pot
docs/_build/gettext/intro/: installing.pot
docs/_build/locale/en/LC_MESSAGES/: index.mo  index.po  sphinx.mo  sphinx.po
docs/_build/locale/en/LC_MESSAGES/community/: contributing.mo  contributing.po  license.po
docs/_build/locale/en/LC_MESSAGES/infra/: apps.mo  apps.po  backups.po  databases.po  overview.mo  overview.po  security.mo  security.po  troubleshooting.mo  troubleshooting.po
docs/_build/locale/en/LC_MESSAGES/intro/: installing.mo  installing.po
docs/_build/locale/fr/LC_MESSAGES/: index.mo  index.po  sphinx.mo  sphinx.po
docs/_build/locale/fr/LC_MESSAGES/community/: license.mo  (+3 more)
docs/_static/css/: extra.css
docs/_templates/: versions.html
docs/community/: contributing.md  license.md
docs/infra/: apps.md  backups.md  databases.md  overview.md  security.md  troubleshooting.md
docs/intro/: installing.md
(+63 files in other folders)
