[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "infra-gdr-docs"
requires-python = ">=3.10"
authors = [{ name = "opsocket", email = "opsocket@pm.me" }]
readme = "README.md"
license = {file = "../LICENSE.md"}

version = "0.0.1"
description = ""

dependencies = [
  "sphinx",
  "sphinx_rtd_theme",
  "myst-parser",
]

[project.urls]
home = "https://opsocket.gitlab.io/infra-gdr"
